provarAnt/00D1b0000000d5bEAA/objects/ATDSA_FOUR__Cat_Content_Junction__c.object
<CustomObject>
    <description>Acts as &quot;junction&quot; object, linking a Content Document to a  Category</description>
    <fields>
        <fullName>ATDSA_FOUR__Category__c</fullName>
        <label>Category</label>
        <referenceTo>ATDSA_FOUR__Category__c</referenceTo>
        <relationshipName>Cat_Content_Junction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__ContentId__c</fullName>
        <label>ContentId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__External_Id__c</fullName>
        <description>To maintain unique combinations of Content and Category Ids. Will be of the form CategoryId_ContentId</description>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ATDSA_FOUR__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Category Content Junction</label>
    <nameField>
        <displayFormat>CCJ-{00000}</displayFormat>
        <label>Cat-Content-Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Category Content Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ATDSA_FOUR__Valid_Content_Id</fullName>
        <active>false</active>
        <description>Don&apos;t allow user to enter invalid Content Id from UI</description>
        <errorConditionFormula>REGEX( ATDSA_FOUR__ContentId__c , &quot;[a-zA-Z0-9]{15}|[a-zA-Z0-9]{18}&quot;)</errorConditionFormula>
        <errorMessage>Don&apos;t try to create this record from UI</errorMessage>
    </validationRules>
</CustomObject>